@@ -29,7 +29,8 @@ highlights. The full CVS log is available at www.xchat.org/cvslog/
  - The CTRL-F keybinding (Find) is now disabled when using Emacs keys.
  - Added /SET gui_tweaks [FIXME explain it].
  - Fixed opening URLs on KDE that didn't begin with http://.
- - 
+ - A better quit dialog which warns you if you're connected to IRC or have
+   active file transfers.
  - 
  - The userlist and treeview can now be placed on the same side, with a resize
    handle in between them. They can also be dragged and dropped into place.
